[package]
name = "olympus"
version = "0.1.0"
edition = "2021"
authors = ["Baptiste Esteban <baptiste.esteban.27@gmail.com>"]
repository = "https://github.com/baptisteesteban/olympus"
readme = "README.md"
license = "MPL2"
license-file = "LICENSE.md"
keywords = [
    "image processing"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
