[package]
edition = "2021"
name = "olympus-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.0", features = ["derive"]}
olympus = {path = "../.."}

[[bin]]
bench = false
name = "struct_morpho"
path = "src/struct_morpho.rs"
test = false

[[bin]]
bench = false
name = "test_tos"
path = "src/test_tos.rs"
test = false
